# squint

./: .gitignore  404.html  LICENSE  README.md  index.html  interactive.py  main.py  mkdocs.yml  objects.inv  pyproject.toml
.github/workflows/: check_code_format.yml  deploy_docs.yml  mkdocs_build_check.yml  pytest.yml
.scratch/: jax_example.py  multitelescope.py  simple_int.py  test.py  test_dynamiqs.py  transduction.py
api/: base.html  circuit.html  distributed.html  dv.html  fock.html  math.html  noise.html  ops.html  simulator.html  utils.html
docs/: index.md
docs/__marimo__/: 4a_benchmark.ipynb
docs/api/: base.md  circuit.md  distributed.md  dv.md  fock.md  math.md  noise.md  ops.md  simulator.md  utils.md
docs/explanation/: metrology.md  tricks_and_tips.md
docs/stylesheets/: admonition_template.css
docs/tutorials/: multi_qubit.md  noise.md  one_qubit.md  optimization.md
examples/: 1a_qubit.html  1a_qubit.ipynb  1a_qubit.py  1b_ghz.html  1b_ghz.ipynb  1c_all_to_all_ising.ipynb  2a_single_photon.html  2a_single_photon.ipynb  2b_gjc.ipynb  2b_jgc.ipynb  2b_vlbi.html  2b_vlbi.ipynb  2c_kok.ipynb  2d_ansatz.ipynb  2e_weakcoherent_multiparameter.ipynb  3a_qudit.html  3a_qudit.ipynb  3a_xx_ising.ipynb  3b_xx_ising.html  3b_xx_ising.ipynb  4a_benchmark.html  4a_benchmark.ipynb  4a_benchmark.py  5a_noise.html  5a_noise.ipynb  6a_visualization.ipynb  7a_telescope_noise.ipynb  7b_telescope_optimize.ipynb  7c_direct_detection.ipynb
examples/__marimo__/: 4a_benchmark.ipynb
examples/experiments/: 2d_ansatz.ipynb  7b_telescope.py  cholesky.py  circuit.py  distributed_test.py  fock.py  gjc copy.py  gjc.py  herzog.py  holland_burnett.py  multimode.py  multitelescope.py  noise.py  ops.py  optimize.py  photonic.py  qft.py  qubit.py  reparameterization.py  shared.py  sld.py  symbolic_regression_estimator.py  telescope_noise.ipynb  unitarity.py
examples/interactive/: gjc.py  interactive.py
examples/marimo/: 1a_qubit.py  4a_benchmark.py
examples/telescope/: test_fock_opt_pure.py
experiments/: fock.py  herzog.py  holland_burnett.py  jgc.py  loss.py  photonic.py  qft.py  qubit.py
explanation/: metrology.html  tricks_and_tips.html
interactive/: gjc.py  interactive.py
src/qtelescope/: circuit.py  ops.py  utils.py
src/squint/: __init__.py  blocks.py  circuit.py  diagram.py  estimator.py  hdfdict.py  io.py  protocol.py  simulator.py  utils.py  visualize.py
src/squint/circuit/: subscripts.py
src/squint/cli/: noise.py  result.py  telescope.py
src/squint/compiler/: tensor_network.py
src/squint/ops/: __init__.py  base.py  distributed.py  dof.py  dv.py  fock.py  gellmann.py  math.py  noise.py
src/squint/simulator/: __init__.py  tn.py
src/squint/utils/: __init__.py  hdfdict.py  partition.py
stylesheets/: admonitions.css  custom_css.css  headers.css
test/: gpu.py
tests/: benchmark.py  cholesky.py  circuit.py  direct_detection.py  distributed_test.py  gpu.py  multimode.py  multiport.py  noise.py  ops.py  optimize.py  reparameterization.py  shared.py  test_backends.py  test_benchmark.py  test_block.py  test_dv_ops.py  test_fock_ops.py  test_fock_opt.py  test_gpu.py  test_grads.py  test_locc.py  test_mode_to_number.py  test_notebooks.py  test_ops.py  test_qft.py  test_qudits.py  test_unitary.py  test_visualize.py  unitarity.py
tests/test_estimators/: test_nflow.py
tutorials/: multi_qubit.html  noise.html  one_qubit.html  optimization.html
