[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src/"]

[project]
name = "squint"
version = "0.0.0"
requires-python = ">=3.12"

description = "squint - sensing with quantum interferometery"
readme = "README.md"
keywords = ["quantum", "sensor", "optimization"]
license = {text = "Apache 2.0"}

authors = [
    {name = "Benjamin MacLellan", email = "benjamin.maclellan@uwaterloo.ca"},
]
classifiers = [
  # Indicate who your project is intended for
  "Intended Audience :: Science/Research ",
  "Topic :: Scientific/Engineering :: Physics",
  "Topic :: Scientific/Engineering :: Information Analysis",

  # Pick your license as you wish (see also "license" above)
  "License :: OSI Approved :: Apache Software License",

  # Specify the Python versions you support here.
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
]
dependencies = [
    "beartype>=0.19.0",
    "dynamiqs>=0.3.1",
    "einops>=0.8.1",
    "equinox>=0.11.11",
    "h5py>=3.12.1",
    "hvplot>=0.11.2",
    "ipykernel>=6.29.5",
    "jax==0.4.38",
    "jaxlib>=0.4.38",
    "loguru>=0.7.3",
    "marimo>=0.11.2",
    "matplotlib>=3.10.0",
    "optax>=0.2.4",
    "paramax>=0.0.0",
    "polars>=1.22.0",
    "pytest>=8.3.5",
    "python-dotenv>=1.0.1",
    "rich>=13.9.4",
    "seaborn>=0.13.2",
    "tqdm>=4.67.1",
    "typer>=0.15.2",
]

[project.optional-dependencies]
docs = [
  "mkdocs==1.6.1",
  "mkdocs-include-exclude-files==0.1.0",
  "mkdocs-ipynb==0.1.0",
  "mkdocs-material==9.6.7",
  "mkdocstrings[python]==0.28.3",
  "pymdown-extensions==10.14.3",
  "mdx_truly_sane_lists",
]

[tool.ruff.lint]
select = ["E4", "E9", "F", "B", "I"]
fixable = ["ALL"]
