[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src/"]

[project]
name = "squint"
version = "0.0.0"
requires-python = ">=3.10"

description = "squint - sensing with quantum interferometery"
readme = "README.md"
keywords = ["quantum", "sensor", "optimization"]
license = {text = "Apache 2.0"}

authors = [
    {name = "Benjamin MacLellan", email = "benjamin.maclellan@uwaterloo.ca"},
]
classifiers = [
  # Indicate who your project is intended for
  "Intended Audience :: Science/Research ",
  "Topic :: Scientific/Engineering :: Physics",
  "Topic :: Scientific/Engineering :: Information Analysis",

  # Pick your license as you wish (see also "license" above)
  "License :: OSI Approved :: Apache Software License",

  # Specify the Python versions you support here.
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
]
dependencies = [
  "beartype",
  "einops",
  "equinox",
  "h5py",
  "jax",
  "jaxlib",
  "loguru",
  "matplotlib",
  "optax",
  "paramax",
  "python-dotenv",
  "rich",
  "seaborn",
]

[project.optional-dependencies]
docs = [
  "mkdocs",
  "mkdocs-include-exclude-files",
  "mkdocs-ipynb",
  "mkdocs-material",
  "mkdocstrings[python]",
  "pymdown-extensions",
  "mdx_truly_sane_lists",
  "tikzpy",
]

tests = [
  "pytest",
  "pytest-sugar",
]

[tool.ruff.lint]
select = ["E4", "E9", "F", "B", "I"]
fixable = ["ALL"]
